--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </style>
 </head>
 <body>
-  <h1>МАААААААААКС!</h1>
+  <h1>МАААААААКС!</h1>
   <p>ОТСОСИ МОЙ ОГРРОМНЫЙ ПЕНИС.</p>
 </body>
 </html>
