--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <style>
     body {
-      font-family: sans-serif;
-      padding: 20px;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    background-color: #fce4e4; /* нужный цвет */
+    font-family: sans-serif;
     }
   </style>
 </head>
 <body>
-  <h1>МАААААААКС!</h1>
+  <h1>МАААААААААКС!</h1>
   <p>ОТСОСИ МОЙ ОГРРОМНЫЙ ПЕНИС.</p>
+
 </body>
 </html>
