--- a/index.html
+++ b/index.html
@@ -2,21 +2,24 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Информация</title>
-  <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  <title>My Telegram Game</title>
+  <script src="https://telegram.org/js/games.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    background-color: #fce4e4; /* нужный цвет */
-    font-family: sans-serif;
+    html, body {
+      margin: 0;
+      padding: 0;
+      background: #111;
+      color: white;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-family: sans-serif;
     }
   </style>
 </head>
 <body>
-  <h1>МАААААААААКС!</h1>
-  <p>ОТСОСИ МОЙ ОГРРОМНЫЙ ПЕНИС.</p>
-
+  <h1>Добро пожаловать в NOVA!</h1>
 </body>
 </html>
