--- a/index.html
+++ b/index.html
@@ -1,25 +1,38 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>My Telegram Game</title>
-  <script src="https://telegram.org/js/games.js"></script>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      background: #111;
-      color: white;
-      height: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-family: sans-serif;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>Космический Сайт</title>
+    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
+
 <body>
-  <h1>Добро пожаловать в NOVA!</h1>
+
+<div class="circle-container">
+    <div class="circle">
+        <div class="multiplier" id="multiplier">1.00X</div>
+    </div>
+    <button class="generate-btn" onclick="generateMultiplier()">GET SIGNAL</button>
+</div>
+
+<div class="content">
+    <h1>Добро пожаловать!</h1>
+    <p>Это мини-приложение Telegram</p>
+</div>
+
+<script>
+    // Telegram WebApp Init
+    const tg = window.Telegram.WebApp;
+    tg.expand(); // раскрыть на весь экран
+
+    function generateMultiplier() {
+        const multiplierElement = document.getElementById('multiplier');
+        const randomValue = (Math.random() * 2 + 1).toFixed(2); // от 1.00 до 3.00
+        multiplierElement.textContent = randomValue + "X";
+    }
+</script>
+
 </body>
-</html>
+</html> 
